--- a/offerpage.html
+++ b/offerpage.html
@@ -17,7 +17,7 @@
         <div class="header-2">
             <div id="menu-bar" class="fas fa-bars"></div>
             <nav class="navbar">
-                <a href="home.html" class="btn" role="button" style="border: green;" >HOME</a>
+                <a href="index.html" class="btn" role="button" style="border: green;" >HOME</a>
                 <a href="Registration-css.html" class="btn btn-info" role="button" style="border: green;" >ACCOUNT CREATION</a>
                 <a href="loginpage.html" class="btn btn-info" role="button" style="border: green;">LOGIN</a>
                 <a href="veg.html" class="btn btn-info" role="button" style="border: green;">VEGETABLES</a>
