--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,21 @@
 </head>
 
 <body>
-
+  <header>
+    <div class="header-2">
+            <div id="menu-bar" class="fas fa-bars"></div>
+            <nav class="navbar">
+                
+                <a href="index.html" class="btn" role="button" style="border: green;" >HOME</a>
+                <a href="Registration-css.html" class="btn btn-info" role="button" style="border: green;" >REGISTER</a>
+                <a href="loginpage.html" class="btn btn-info" role="button" style="border: green;">LOGIN</a>
+                <a href="veg.html" class="btn btn-info" role="button" style="border: green;">VEGETABLES</a>
+                <a href="offerpage.html" class="btn btn-info" role="button" style="border: green;" >OFFER</a>
+                <a href="cart.html" class="btn btn-info" role="button" style="border: green;" >YOUR CART</a>
+                <a href="contact.html" class="btn btn-info" role="button" style="border: green;" >CONTACT US</a>
+            </nav>    
+        </div>
+  </header>
 
   <main class="container">
 
@@ -252,7 +266,7 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
+  <script src="script.js"></script>
 </body>
 
 </html>
